// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty initial state 1`] = `
Object {
  "action": Object {
    "0": Object {
      "": Object {
        "d": 123,
      },
    },
  },
}
`;

exports[`predefined state shouldns overwrite 1`] = `
Object {
  "action": Object {
    "0": Object {
      "": Object {
        "d": 999,
      },
    },
  },
}
`;
